# HanziIDSComponentExplorer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update-ids-data.yml
HanziIDSComponentExplorer.glyphsPlugin/Contents/: Info.plist
HanziIDSComponentExplorer.glyphsPlugin/Contents/Resources/: glyphs_adapter.py  glyphs_ui.py  hanzi_core.py  localization.py  plugin.py
HanziIDSComponentExplorer.glyphsPlugin/Contents/Resources/data/: ids.pdata
scripts/: build_ids.py  ids_generator.py
tests/: test_ids_generator.py
